# opensvc

./: .gitattributes  gpac_bb.patch
cmake/: ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  OpenSVCDecoder.vcxproj  OpenSVCDecoder.vcxproj.filters  ZERO_CHECK.vcxproj.filters
cmake/AVC/h264_baseline_decoder/lib_baseline/: AVC_baseline.vcxproj  AVC_baseline.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters
cmake/AVC/h264_main_decoder/lib_main/: AVC_main.vcxproj  AVC_main.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters
cmake/CommonFiles/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  OpenSVCDec.vcxproj  OpenSVCDec.vcxproj.filters  OpenSVCDecoder.def
cmake/SVC/lib_svc/: INSTALL.vcxproj  INSTALL.vcxproj.filters  SVC_baseline.vcxproj  SVC_baseline.vcxproj.filters
cmake/SVC/libview/: DisplaySDL.vcxproj  DisplaySDL.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters
svcsvn/: CMakeLists.txt
svcsvn/AVC/: CREDITS
svcsvn/AVC/h264_baseline_decoder/lib_baseline/: CMakeLists.txt  Transform.c  Transform.h  cavlc.c  dct_arm.asm  decode_MB_I.c  decode_MB_P.c  display_management.c  lib_baseline.pjt  lib_h264.icproj  lib_h264.vcproj  lib_h264_v9.vcproj  memory_management.c  pps.c  scaling_matrix.c  scaling_matrix.h  slice_header.c  sps.c  type.h
svcsvn/AVC/h264_main_decoder/lib_main/: CMakeLists.txt  Doxyfile  lib_h264_main.icproj  lib_h264_main.vcproj  lib_h264_main_v9.vcproj  lib_main.pjt
svcsvn/CommonFiles/: OpenSVCDecoder.def  lib_SVCdecoderIetr.icproj  lib_SVCdecoderIetr.vcproj  lib_SVCdecoderIetr_2008.sln  lib_SVCdecoderIetr_2008.vcproj
svcsvn/CommonFiles/src/: CMakeLists.txt  H264_plg.c  ParseAU.c  SvcInterface.h  display_tcpmp.c
svcsvn/Mpeg4/decodeur/Sources/: 23002_2_FCD_software.c  F_mpeg.c  Get_motion_vector.c  Images_set_edges.c  Interpolation.c  InverseACDCpred.c  InverseDCT.c  InverseQuant.c  Param_MB.c  ReadM4v.c  SDX_Images_setedges.c  SDX_Increment.c  SDX_StockBlocksCb.c  SDX_StockBlocksCr.c  SDX_StockBlocksLum.c  SDX_Stock_in_pict.c  SDX_decode_MB.c  SDX_get_motion_vector.c  SDX_interpolation.c  StockBlocksCb.c  StockBlocksCr.c  StockBlocksLum.c  Stock_in_Pict.c  VLCinverse.c  VOL.c  VideoObjectPlaneI.c  decode_MB.c  (+6 more)
svcsvn/SVC/Build_CCS/: TI_dsp.c  argvParser.c  argvParser.h  preinclude-GDEM.h
svcsvn/SVC/lib_svc/: BL_residual.c  CMakeLists.txt  ChooseLayer.c  ErrorDetection.c  MemoryManagement.c  ParseAUDecoder.c  SVCdisplay.c  SliceHeaderAnnex.c  SliceHeaderExtension.c  SwitchAdress.c  ict_svc.h  lib_svc.icproj  lib_svc.pjt  lib_svc.vcproj  lib_svc_v9.vcproj  nal_unit_header_svc_extension.c  pic_list_svc.c  set_layer.h  slice_header_svc.c  svc_type.h
svcsvn/SVC/libview/: CMakeLists.txt  Makefile  WriteYUV.c  extract_picture.c  lib_view.vcproj  lib_view_v9.vcproj  sdl.c
(+23 files in other folders)
