include_directories(../../AVC/h264_baseline_decoder/lib_baseline ../../AVC/h264_main_decoder/lib_main ${SDL_INCLUDE_DIR}) 

ADD_DEFINITIONS(-DHAVE_SDL)

add_library (SVC_baseline
B_BL.cBackEdge.cBL_residual.cBL.ccabac_svc.cCabacBMacroblock.cCabacIPartionning.cCabacPMacroblock.ccavlc_svc.cChooseLayer.cCoeffLevelPrediction.cCoordonates.cegde_boundary.cErrorConcealment.cErrorDetection.cFill_caches_svc.cFinishFrameSVC.cI_BL.cInterLayerPrediction.cLoop_filter_ext.cmacroblock_filter.cMb_B_svc.cMb_I_svc.cMb_P_svc.cmb_padding.cmb_upsample_filter.cMemoryManagement.cMergeMvIdx.cmotion_vector_svc.cnal_unit_header_svc_extension.cP_BL.cParseAUDecoder.cPartitionType.cpic_list_svc.cresidual_4x4.cresidual_8x8.cresidual_chroma.cResidualProcessing.cseq_parameter_set_svc_extension.cSlice_data_B_avc.cSlice_data_B_svc.cslice_data_cabac.cslice_data_cavlc.cSlice_data_I_avc.cslice_data_I_svc.cSlice_data_P_avc.cslice_data_P_svc.cslice_data_svc.cslice_header_svc.cslice_layer_in_scalable_extension_rbsp.cSliceHeaderAnnex.cSliceHeaderExtension.csvc_neighbourhood.cSVCdisplay.cSwitchAdress.cupsample_residu.cVlcCabacSvc.cWriteBackSVC.c
)
