add_library (AVC_baseline
AVCdisplay.cBitstreamSkip.ccavlc_mmx.ccavlc.cdecode_MB_I.cdecode_MB_P.cdisplay_management.cedge_filter_MMX.cedge_filter_TI.cedge_filter.cfill_caches.cfilter.cFinishFrame.cIDR_picture.cImages_set_edges.cinit_data.cinit_Ptr_Fction.cinterpol_0_n_TI.cinterpol_0_n.cinterpol_2_n_TI.cinterpol_2_n.cinterpol_n_0_TI.cinterpol_n_0.cinterpol_n_2_TI.cinterpol_n_2.cinterpol_n_n_TI.cinterpol_n_n.cinterpolation_0_n.cinterpolation_2_n.cinterpolation_4x4_mmx.cinterpolation_4x4_TI.cinterpolation_8x8_SSE2.cinterpolation_8x8.cinterpolation_mmx.cinterpolation_n_0.cinterpolation_n_2.cinterpolation_n_n.cinterpolation.cmacroblock_layer.cmacroblock_partitionning.cmb_pred.cmemory_management.cmotion_vector.cNal.cneighbourhood.cnon_IDR_picture.cpic_list.cpicture_management.cpps.cprediction_mode_8x8.cprediction_mode.cQuantization.cRead_H264.crefill.cscaling_matrix.csei.cslice_data_vlc.cslice_group_map.cslice_header.csps.cTransform.cwrite_back.c
)
