include_directories(../../h264_baseline_decoder/lib_baseline)

add_library (AVC_main
BitstreamSkipB.ccabac.cCabacMbPred.cCabacMvAndRef.ccavlc_main.cDirect_prediction.cFill_caches_cabac.cFinishFrameMain.cinterpolation_main_8x8.cinterpolation_main.cLoop_Filter_B.cmacroblock_cabac.cmacroblock_layer_main.cmb_cabac_partionning.cmb_pred_main.cresidual_cabac.cSetImage4x4.cSetImage8x8.cslice_cabac.cslice_data_B.cslice_data_cabac.cvlc_cabac.c
)
